data/all_generated_tests/raw_wast_tests/br_if_ImproperFunctionCallorReturnHandling_1817.wast
;; 8. **Test Description:** Use a `call` instruction that targets a function with complex return parameters, ensuring a `br_if` within this function correctly manages and unwinds the operand stack before returning to the caller.    - **Constraint:** The operand stack's count and contents management is critical for correct returns.    - **Improper Handling:** Inaccurate stack handling resulting in wrong return values or incorrect function behavior.

(assert_invalid
 (module
  (func $complex-stack-unwind
   (block
    (i32.const 1)
    (block
     (i32.const 2)
     (block
      (i32.const 0)
      (i32.const 3)
      (br_if 1)
      (i32.const 4)
     )
     (i32.const 5)
    )
    (i32.const 6)
   )
   (i32.eqz) (drop)
  )
 )
 "stack unwinding error"
)